// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/INTEGER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./PusHeader.proto";


package tcHistory.protobuf;

message TC13 {
extensions 8 to 108;

  optional ccsds_mal.protobuf.TIME encodingDate = 1;
  optional tcHistory.protobuf.PusHeader pusHeader = 2;
  optional ccsds_mal.protobuf.BLOB rawPacket = 3;
  optional ccsds_mal.protobuf.INTEGER tcId = 4;
  optional ccsds_mal.protobuf.UINTEGER tcSourceId = 5;
  optional ccsds_mal.protobuf.ULONG sequenceCount = 6;
  repeated ccsds_mal.protobuf.STRING parameterPhysicalValue = 7;
}
